--- a/dataset/cities.ipynb
+++ b/dataset/cities.ipynb
@@ -1575,6 +1575,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001A554924370>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df=pd.read_csv('wilaya-cities.csv')\n",
+    "\"\"\"#df.set_index('id')\n",
+    "\n",
+    "new=df.groupby(['wilaya_code','commune_name_ascii'])\n",
+    "new.first()\n",
+    "new.to_json('communes.json',orient='records') \"\"\"\n",
+    "\n",
+    "\n",
+    "df = df.astype({'code':'string'}) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
